<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">如皋招商系统</string>
    <string name="login">登陆</string>
    <string name="my_project">我的项目</string>
    <string name="my_activity">我的活动</string>
    <string name="my_message">我的消息</string>
    <string name="my_notice">我的公告</string>
    <string name="remember_me">记住我</string>
    <string name="project_listview_item_respeople">负责人：</string>
    <string name="project_listview_item_projectlevel">项目阶段：</string>
    <string name="project_listview_item_releasetime">投产日期：</string>
    <string name="username_cannot_be_empty">用户名不能为空</string>
    <string name="pwd_cannot_be_empty">密码不能为空</string>
    <string name="network_error">网络连接失败，请稍后再试。</string>
    <string name="input_username">请填写用户名</string>
    <string name="input_password">请填写密码</string>
    <string name="login_loading">正在登录...</string>
    <string name="loading">载入中...</string>
    <string name="data_empty">没有内容</string>
    <string name="project_detail">项目详情</string>
    <string name="project_name">项目名称：</string>
    <string name="project_stage">项目阶段：</string>
    <string name="project_planning_date">拟投产日期：</string>
    <string name="project_industry_type">产业类型：</string>
    <string name="project_industry_detail">产业明细：</string>
    <string name="project_policy">国家产业政策：</string>
    <string name="project_enviroment">环评：</string>
    <string name="project_case">成功案例：</string>
    <string name="project_scale">投资规模：</string>
    <string name="project_scale_unit">投资规模单位：</string>
    <string name="project_content">项目内容：</string>
    <string name="project_land">用地需求(亩)：</string>
    <string name="project_build_time">用工需求：</string>
    <string name="project_total_amount">年销售收入(万人民币)：</string>
    <string name="project_total_tax">预期税收(万人民币)：</string>
    <string name="project_prjplan">投资实施计划：</string>
    <string name="project_responsible_id">项目责任人：</string>
    <string name="project_city_leader">挂帅领导：</string>
    <string name="project_town_leader">分管领导：</string>
    <string name="project_referrer">项目创建人：</string>
    <string name="project_workers">工作人员：</string>
    <string name="project_iscompany">是否为单位：</string>
    <string name="project_investors">投资方：</string>
    <string name="project_contacts">投资方项目联系人：</string>
    <string name="please_choose">请选择</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="are_you_sure_delete">你确定要删除么？</string>
    <string name="info">提示</string>
    <string name="investor_name">名称：</string>
    <string name="investor_address">地址：</string>
    <string name="investor_status">行业内地为：</string>
    <string name="investor_mainproduct">主要产品：</string>
    <string name="investor_productmemo">近三年概况：</string>
    <string name="contact_name">姓名：</string>
    <string name="contact_role">职位：</string>
    <string name="contact_telephone">手机：</string>
    <string name="contact_phone">电话：</string>
    <string name="contact_memo">公司名称：</string>
    <string name="investor_list">投资方列表</string>
    <string name="investor">投资方</string>
    <string name="contact_list">联系人列表</string>
    <string name="contact">联系人</string>
    <string name="update_success">修改成功</string>
    <string name="update_fail">修改失败</string>
    <string name="create_success">创建成功</string>
    <string name="create_fail">创建失败</string>
    <string name="activity_name">活动主题：</string>
    <string name="activity_case">活动内容：</string>
    <string name="activity_address">活动地点：</string>
    <string name="image_upload">照片上传：</string>
    <string name="choose_leaders">选择领导：</string>
    <string name="request_content">请求内容：</string>
    <string name="pls_input_number">请输入数字</string>
    <string name="pls_input_msg">请填写消息内容</string>
    <string name="msg_send_failed">消息发送失败，请稍后再试。</string>
    <string name="pls_input_activity_name">请输入活动主题。</string>
    <string name="current_month_placeholder">January 1970</string>
    <string name="previous_month_placeholder">&lt;&lt;</string>
    <string name="next_month_placeholder">&gt;&gt;</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="just_now">刚刚</string>

    <string-array name="days_array">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <string name="server_type">演示</string>
    <string name="check_workers">至少填写一个工作人员</string>
    <string name="check_investor">至少填写一个投资方</string>
    <string name="check_contact">至少填写一个投资方项目联系人</string>
    <string name="can_not_be_empty">不能为空</string>
    <string name="not_meet_requirement">不符合要求</string>
    <string name="colon">：</string>
    <string name="search_project_name">项目名称</string>
    <string name="search">搜索</string>
    <string name="show_all">显示全部</string>
    <string name="project_listview_item_type">项目类别：</string>
    <string name="project_listview_item_status">有效性：</string>
    <string name="project_listview_item_evaluater">评估人：</string>
    <string name="project_listview_item_evaluater_btn">评估</string>
    <string name="project_eavlater">项目评估</string>
    <string name="notice_detail">公告详情</string>
    <string name="new_notice">最新公告</string>
    <string name="close">关闭</string>
    <string name="add_activity_only_support_today">请选择当天日期添加活动</string>

</resources>