<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/search_project_name"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/search_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:focusable="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center" >

        <Button
            android:id="@+id/search_confirm"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="20dp"
            android:background="#299ef1"
            android:text="@string/search"
            android:textColor="#ffffff"
            android:textSize="18dp" />

        <Button
            android:id="@+id/search_cancel"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:background="#ff0000"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="18dp" />
    </LinearLayout>

</LinearLayout>